creating collections by implementing Arraylist and hashMap